--- a/black-clover-ep-120.html
+++ b/black-clover-ep-120.html
@@ -108,7 +108,7 @@
   <div class="nav-buttons">
     <a href="black-clover-ep-119.html">ก่อนหน้า</a>
     <a href="/">ทั้งหมด</a>
-    
+    <a href="black-clover-ep-121.html">ถัดไป</a>
   </div>
 </main>
 
