--- a/black-clover-ep-170.html
+++ b/black-clover-ep-170.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Black Clover แบล็คโคลเวอร์ ตอนที่ 170 พากย์ไทย</title>
+  <title>Black Clover แบล็คโคลเวอร์ ตอนที่ 170 พากย์ไทย (171รออัพเดท)</title>
   <link rel="icon" href="https://img2.pic.in.th/pic/039b1c3dd878efaf74.png" type="image/png" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
@@ -36,7 +36,7 @@
   <div class="nav-buttons">
     <a href="black-clover-ep-169.html">ก่อนหน้า</a>
     <a href="/">ทั้งหมด</a>
-    <a href="black-clover-ep-170.html">ถัดไป</a>
+    
   </div>
 </main>
 
