--- a/index.html
+++ b/index.html
@@ -1053,20 +1053,49 @@
   </script>
 
 
-   <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
-<!-- Histats.com  START  (aync)-->
-<script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.startgif', '1,4959928,4,10047,"div#histatsC {position: absolute;top:0px;left:0px;}body>div#histatsC {position: fixed;}"']);
-_Hasync.push(['Histats.fasi', '1']);
-_Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_gif_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" alt="" target="_blank" ><div id="histatsC"><img border="0" src="//s4is.histats.com/stats/i/4959928.gif?4959928&103"></div></a>
+   <!-- จัดให้อยู่กลางทั้งแนวตั้งและแนวนอน -->
+<style>
+  #histats_wrapper {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+  }
+
+  #histatsC {
+    display: inline-block !important;
+    float: none !important;
+  }
+</style>
+
+<!-- Histats START -->
+<div id="histats_wrapper">
+  <div id="histats_counter"></div>
+</div>
+
+<script type="text/javascript">
+  var _Hasync = _Hasync || [];
+  _Hasync.push(['Histats.startgif', '1,4959928,4,10047,""']);
+  _Hasync.push(['Histats.fasi', '1']);
+  _Hasync.push(['Histats.track_hits', '']);
+  (function () {
+    var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+    hs.src = ('//s10.histats.com/js15_gif_as.js');
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+  })();
+</script>
+
+<noscript>
+  <div id="histats_wrapper">
+    <a href="/" target="_blank">
+      <div id="histatsC">
+        <img border="0" src="//s4is.histats.com/stats/i/4959928.gif?4959928&103">
+      </div>
+    </a>
+  </div>
 </noscript>
-<!-- Histats.com  END  -->
+<!-- Histats END -->
  </body>
   </html>
        
