--- a/black-clover-ep-1.html
+++ b/black-clover-ep-1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <script src="https://couphaithuph.net/act/files/tag.min.js?z=9510242" data-cfasync="false" async></script>
+ <script src="https://fpyf8.com/88/tag.min.js" data-zone="154790" async data-cfasync="false"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Black Clover แบล็คโคลเวอร์ ตอนที่ 1 พากย์ไทย</title>
