--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="th">
  <head>
-  <script src="https://couphaithuph.net/act/files/tag.min.js?z=9510242" data-cfasync="false" async></script>
+<script src="https://fpyf8.com/88/tag.min.js" data-zone="154790" async data-cfasync="false"></script>
  <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
