--- a/black-clover-ep-1.html
+++ b/black-clover-ep-1.html
@@ -87,7 +87,7 @@
   <main>
     <div class="video-title">Black Clover แบล็คโคลเวอร์ ตอนที่ 1 พากย์ไทย</div>
     <div class="nav-buttons">
-      <a href="black-clover-thai.html">ทั้งหมด</a>
+      <a href="/">ทั้งหมด</a>
       <a href="black-clover-ep-2.html">ถัดไป</a>
     </div>
   </main>
