--- a/black-clover-ep-8.html
+++ b/black-clover-ep-8.html
@@ -56,6 +56,7 @@
     <div class="nav-buttons">
       <a href="black-clover-ep-7.html">ก่อนหน้า</a>
       <a href="/">ทั้งหมด</a>
+      <a href="black-clover-ep-9.html">ถัดไป</a>
     </div>
   </main>
 
